// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.common.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/common/v1;common";

// ResourceHeader is a shared resource header.
message ResourceHeader {
  // kind is a resource kind
  string kind = 1;
  // sub_kind is an optional resource sub kind, used in some resources
  string sub_kind = 2;
  // version is version
  string version = 3;
  // metadata is resource metadata
  Metadata metadata = 4;
}

// Metadata is resource metadata
message Metadata {
  // name is an object name
  string name = 1;
  // namespace is object namespace. The field should be called "namespace"
  // when it returns in Teleport 2.4.
  string namespace = 2;
  // description is object description
  string description = 3;
  // labels is a set of labels
  map<string, string> labels = 5;
  // expires is a global expiry time header can be set on any resource in the
  // system.
  google.protobuf.Timestamp expires = 6;
  // ID is a record ID
  int64 id = 7;
}
