// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.externalcloudaudit.v1;

import "teleport/header/v1/resourceheader.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/externalcloudaudit/v1;externalcloudauditv1";

// ExternalCloudAudit contains external cloud audit configuration.
// It's used only in Teleport Cloud with feature called "bring your own bucket".
// It contains configuration that allows store audit events and session
// recordings on customer infra instead of Teleport Cloud.
message ExternalCloudAudit {
  // Header is the header for the resource.
  teleport.header.v1.ResourceHeader header = 1;
  // Spec is the specification for the external cloud audit.
  ExternalCloudAuditSpec spec = 2;
}

// ExternalCloudAuditConfigSpec is the specification of external cloud audit.
message ExternalCloudAuditSpec {
  // IntegrationName is name of existing AWS OIDC intagration used to
  // generate AWS credentials.
  string integration_name = 1;
  // SessionsRecordingsURI is s3 path used to store sessions recordings.
  string sessions_recordings_uri = 2;
  // AthenaWorkgroup is workgroup used by Athena audit logs during queries.
  string athena_workgroup = 3;
  // GlueDatabase is database used by Athena audit logs during queries.
  string glue_database = 4;
  // GlueTable is table used by Athena audit logs during queries.
  string glue_table = 5;
  // AuditEventsLongTermURI is s3 path used to store batched parquet files with
  // audit events, partitioned by event date.
  string audit_events_long_term_uri = 6;
  // AthenaResultsURI is s3 path used to store temporary results generated by
  // Athena engine.
  string athena_results_uri = 7;
  // PolicyName is the name of the IAM policy attached to the OIDC integration
  // role.
  string policy_name = 8;
  // Region is the AWS region where the infrastructure is hosted.
  string region = 9;
}
